# Qwen2-7b-rust-sft

./: .gitignore  CLAUDE.md  README.md  SAMPLE_OUTPUT.md  evaluate_rust_models.py  pyproject.toml  train_qwen2_rust.py
.claude/commands/: model-trainer.md
research/: curriculum-learning-experiment.md  dataset-analysis.md  hyperparameter-experiments.md  qwen3-0.6b-experiments.md
src/qwen2_rust/: __init__.py  format_utils.py
src/qwen2_rust/cli/: __init__.py  fetch_metrics.py  generate_think_dataset.py  job_info.py  merge_and_gguf.py  train.py  validate.py
