[project]
name = "qwen2-rust"
version = "0.1.0"
description = "Qwen2-7B Rust fine-tuning utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
    "trackio>=0.10.0",
]

[project.scripts]
qwen2-train = "qwen2_rust.cli.train:main"
qwen2-fetch-metrics = "qwen2_rust.cli.fetch_metrics:main"
qwen2-job-info = "qwen2_rust.cli.job_info:main"
qwen2-evaluate = "qwen2_rust.cli.evaluate:main"
qwen2-validate = "qwen2_rust.cli.validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen2_rust"]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["qwen2_rust"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
